<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_monster_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/create_monster"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/et_monster_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_monster_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_kind_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_monster_title" />

    <TextView
        android:id="@+id/tv_kind_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kind"
        app:layout_constraintStart_toStartOf="@id/et_monster_name"
        app:layout_constraintTop_toBottomOf="@id/et_monster_name" />

    <Spinner
        android:id="@+id/spinner_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/monster_kind"
        app:layout_constraintStart_toStartOf="@id/tv_kind_title"
        app:layout_constraintTop_toBottomOf="@id/tv_kind_title" />

    <TextView
        android:id="@+id/tv_monster_size_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/monster_size"
        app:layout_constraintStart_toStartOf="@id/spinner_kind"
        app:layout_constraintTop_toBottomOf="@id/spinner_kind" />

    <Spinner
        android:id="@+id/spinner_monster_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/monster_size"
        app:layout_constraintStart_toStartOf="@id/tv_monster_size_title"
        app:layout_constraintTop_toBottomOf="@id/tv_monster_size_title" />

</androidx.constraintlayout.widget.ConstraintLayout>