<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_wild_hunt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/create_wild_hunt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/et_wd_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_wd_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_wild_hunt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wild_hunt_title" />

    <TextView
        android:id="@+id/tv_color_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/color"
        app:layout_constraintStart_toStartOf="@id/et_wd_name"
        app:layout_constraintTop_toBottomOf="@id/et_wd_name" />

    <Spinner
        android:id="@+id/spnr_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/wild_hunt_color"
        app:layout_constraintStart_toStartOf="@id/tv_color_title"
        app:layout_constraintTop_toBottomOf="@id/tv_color_title" />

</androidx.constraintlayout.widget.ConstraintLayout>